@startuml
hide empty members
set namespaceSeparator ::
namespace amsr {
namespace json {

   class LevelValidator {}

   class CompositionParser<VirtualParser> {}

   class VirtualParser {}

   class StructureParser<VirtualParser> {}
   class StructureParserBase<logic> {}

   class JsonData {}
   class JsonOps {}

   namespace v2 {
      class SingleArrayParser {}

      class SingleObjectParser {}

      class Parser {}

      SingleArrayParser --|> Parser
      SingleArrayParser --> amsr::json::LevelValidator

      SingleObjectParser --|> Parser
      SingleObjectParser --> amsr::json::LevelValidator

      Parser --|> amsr::json::CompositionParser
      Parser --> amsr::json::JsonData
   }

   CompositionParser --|> VirtualParser
   CompositionParser --> JsonData

   VirtualParser --> StructureParser

   StructureParser --> JsonData
   StructureParser --|> StructureParserBase
   StructureParser --> VirtualParser
   StructureParser --> JsonOps

   JsonOps --> JsonData
   JsonOps --> OptChar

}
}

@enduml
